<resources>
    <string name="app_name">Airport App</string>
    <string name="login_button">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="remember_password">Remember Password</string>
    <string name="login_title">Login</string>
    <string name="logo">Logo</string>

    <!-- Nav Graph Titles -->
    <string name="dashboard_title">Dashboard</string>
    <string name="flight_list_title">Flight List</string>
    <string name="passenger_list_title">Passenger List</string>
    <string name="ticket_detail_title">Ticket Detail</string>
    <string name="revenue_stats_title">Revenue Stats</string>
    <string name="settings_title">Settings</string>

    <!-- Dashboard Fragment -->
    <string name="flight_schedules">Flight Schedules</string>
    <string name="total_revenue_statistics">Total Revenue Statistics</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="user_avatar">Avatar</string>

    <!-- Item Flight -->
    <string name="arrow_description">Arrow</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="vn_airlines">VN Airlines</string>
</resources>